--- a/examples/android/templates/arquivo.xml
+++ b/examples/android/templates/arquivo.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-   <LinearLayout
-       android:orientation="vertical" android:layout_width="match_parent"
-       android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
 
     {{#android:fieldsXML}}
     {{.}}
     {{/android:fieldsXML}}
 
-   </LinearLayout>
-</layout>
+</LinearLayout>
