Entity_generator Adicionado Referencias

--- a/testes/entity/template/form.html
+++ b/testes/entity/template/form.html
@@ -12,5 +12,10 @@
     {{#entity:attributes}}
         {{.}}
     {{/entity:attributes}}
+
+    <h4>Aqui estão as referencias</h4>
+    {{#entity:references}}
+        {{reference.name}}
+    {{/entity:references}}
 </body>
 </html>
