Entity_generator references, ajustes de config, entity para schema e field opcional

--- a/testes/entity/template/home.html
+++ b/testes/entity/template/home.html
@@ -16,8 +16,8 @@
         {{#entity:entitys_config}}
             <div class="card">
                 <div class="card-body">
-                    <h5 class="card-title">{{entity.name}}</h5>
-                    <a href="form{{entity.name}}.html">Formulário</a>
+                    <h5 class="card-title">{{schema.name}}</h5>
+                    <a href="form{{schema.name}}.html">Formulário</a>
                 </div>
             </div>
         {{/entity:entitys_config}}
