#7 Pipeline operator adicionada

--- a/exemplos/entity/template/form.html
+++ b/exemplos/entity/template/form.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
     <title>{{title}}</title>
 </head>
 <body>
     <div class="container my-3">
         <h1>{{entity:name}}</h1>
 
-        <h3>{{entity:custom.dbname}}</h3>
+        <h3>{{entity:custom.dbname | easy}}</h3>
 
         <form action="">
             {{#entity:forms}}
